--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ span, a {
   color: #FF9900;
 }
 
-p {
+p, #footer {
   color: #7D7987;
   font-size: 14px;
   line-height: 28px;
@@ -37,4 +37,11 @@ p {
 
 #footer a + a { /* seleciona o link que tenha anterior a ele tenha um link */
   margin-left: 28px;
+}
+
+#line {
+  width: 568px;
+  height: 0px;
+  margin: 0 auto 8px;
+  border: 1px #ECEFF2 solid;
 }
