--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ p, #footer {
   line-height: 28px;
 }
 
+#footer {
+  margin-bottom: 33px;
+}
+
 #footer a + a { /* seleciona o link que tenha anterior a ele tenha um link */
   margin-left: 28px;
 }
@@ -44,4 +48,10 @@ p, #footer {
   height: 0px;
   margin: 0 auto 8px;
   border: 1px #ECEFF2 solid;
+}
+
+#balls {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
 }
